more styling and front end development, fixing mobile bugs and alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,8 @@
 
 body {
     font-family: 'Cutive Mono', monospace;
-    font-size: 16px;
+    font-size: 15px;
+    color: #2B3752;
     margin: 0 auto;
     background-color: #F4F7ED;
 }
@@ -36,26 +37,9 @@ label + label {
     margin-top: 20px;
 }
 
-/*a {
-  display: inline-block;
-  border-radius: 4px;
-  background-color: #f4511e;
-  border: none;
-  color: #FFFFFF;
-  text-align: center;
-  font-size: 28px;
-  padding: 20px;
-  width: 200px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
-}
 
-a:hover {
-
-}
-*/
 a {
+    text-decoration: none !important;
     display: inline-block;
     border-radius: 12px;
     background-color: #86EE60;
@@ -83,17 +67,19 @@ a {
             transition-timing-function: linear;
 }
 a:hover {
-  background: #F4F7ED;
+  background: #2B3752;
+  color: #86EE60;
 }
 
 .nav {
+    text-decoration: none !important;
     display: inline-block;
     border-radius: 7px;
     background-color: #86EE60;
     border: none;
     color: #2B3752;
     text-align: center;
-    font-size: 16px;
+    font-size: 18px;
     padding: 5px;
     width: 100px;
     transition: all 0.5s;
@@ -104,24 +90,29 @@ a:hover {
        -moz-transition-property: background;
          -o-transition-property: background;
             transition-property: background;
-    -webkit-transition-duration: 1s;
-       -moz-transition-duration: 1s;
-         -o-transition-duration: 1s;
-            transition-duration: 1s;
+    -webkit-transition-duration: 0.5s;
+       -moz-transition-duration: 0.5s;
+         -o-transition-duration: 0.5s;
+            transition-duration: 0.5s;
     -webkit-transition-timing-function: linear;
        -moz-transition-timing-function: linear;
          -o-transition-timing-function: linear;
             transition-timing-function: linear;
 }
 
+.nav:hover {
+    background-color: #2E6E65;
+    color: #F4F7ED;
+}
 .nav-top {
+    text-decoration: none !important;
     display: inline-block;
     border-radius: 12px;
     background-color: #86EE60;
     border: none;
     color: #2B3752;
     text-align: center;
-    font-size: 20px;
+    font-size: 24px;
     padding: 10px;
     width: 150px;
     transition: all 0.5s;
@@ -132,15 +123,21 @@ a:hover {
        -moz-transition-property: background;
          -o-transition-property: background;
             transition-property: background;
-    -webkit-transition-duration: 1s;
-       -moz-transition-duration: 1s;
-         -o-transition-duration: 1s;
-            transition-duration: 1s;
+    -webkit-transition-duration: 0.5s;
+       -moz-transition-duration: 0.5s;
+         -o-transition-duration: 0.5s;
+            transition-duration: 0.5s;
     -webkit-transition-timing-function: linear;
        -moz-transition-timing-function: linear;
          -o-transition-timing-function: linear;
             transition-timing-function: linear;
 }
+.nav-top:hover {
+    background-color: #2B3752;
+    color: #86EE60;
+}
+
+
 /*input[type=text] {
     width: 500px;
     font-size: 20px;
@@ -161,18 +158,46 @@ input[type=submit] {
 }
 
 textarea {
-  width: 500px;
+  width: 350px;
   height: 400px;
   font-size: 17px;
   font-family: monospace;
   background-color: #F4F7ED;
 }
 
+.bot-cat {
+    font-size: 120px;
+}
+
+.top-cat {
+    font-size: 19px;
+    color: #F4F7ED;
+}
+
 .band {
     background-color: #2E6E65;
     height: 400px;
-    border-radius: 7px;
+    border-radius: 12px;
     border: none;
+    margin-left: 2px;
+    width: 100%;
+}
+
+.band-top {
+    background-color: #2E6E65;
+    height: 200px;
+    border-radius: 12px;
+    width: 100%
+    border: none;
+    padding-left: 20px;
+
+
+}
+
+.logged-in {
+    color: #F4F7ED;
+    padding-top: 10px;
+
 }
 
 .main-title {
@@ -196,20 +221,18 @@ textarea {
     /*cursor: wait; <-- funny*/
 }
 
-.bot-cat {
-    font-size: 120px;
-}
+
 
 .post-title {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
     color: #2B3752;
 }
 
 .post-date {
     position: absolute;
-    right: 0px;
-    bottom: 0px;
+    right: 0%;
+    bottom: 0%;
     color: #2E6E65;
     font-family: 'Cutive Mono', monospace;
 
